--- a/style.css
+++ b/style.css
@@ -7,13 +7,15 @@
   --color2: #406E8E;
 }
 html {
-  background-color: white;
   font-family: Raleway, Arial;
   font-size: 1.2em;
 }
 
+body, header {
+  background-color: #FFFFFD;
+}
+
 header {
-  background-color: white;
   width: 100%;
   margin: 0;
 }
